updated bio page.

--- a/blog/templates/blog/bio_page.html
+++ b/blog/templates/blog/bio_page.html
@@ -1,9 +1,30 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-<div>
-    <p>This is an about page.</p>
+<div class="bio">
+    <p>Just your average predatory slug going to uni. I like dessert wines 
+        a little too much and study CS (which could mean anything from 
+        Computer Science to Celtic Studies... take your pick).
+    </p>
     <br>
-    <p><b>a quote for u.</b> and lorem ipsum stuff.</p>
+    <p>Not sayin' that I'm a filthy memer or anything, but I'm total garbage 
+       for kpop idols & also send my friend monthly meme letters. Which are just 
+       letters. <i>But only in memes</i>.
+    </p>
+    <br>
+    <p><b>I'm friendly, I swear.</b> I love to read and discover new writing,
+        with my favorite kinds being badboy tropes since I'm trashy like that 
+        and also a good thriller/mystery series so I can freak myself out when 
+        I'm alone in my bedroom at night.
+    </p>
+    <br>
+    <p>But really! I like to meet new people, writers or not. It's fun talking 
+        about mutual interests and also bouncing ideas off each other. And also 
+        screaming. Lots of it.
+    </p>
+    
+    <div class="bio_img"></div>
 </div>
+
+
 {% endblock %}
