--- a/blog/templates/blog/bio_page.html
+++ b/blog/templates/blog/bio_page.html
@@ -1,30 +1,20 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<center>
 <div class="bio">
-    <p>Just your average predatory slug going to uni. I like dessert wines 
-        a little too much and study CS (which could mean anything from 
-        Computer Science to Celtic Studies... take your pick).
+    <p><b>Hi! I'm Crystal</b>, an upcoming-fourth year undergraduate CS student.
+        I'm interested in <b>front-end web development</b> and <b>full stack engineering</b>,
+         although there are countless other fields I'd love to explore <i>(such as UX)</i>.
     </p>
     <br>
-    <p>Not sayin' that I'm a filthy memer or anything, but I'm total garbage 
-       for kpop idols & also send my friend monthly meme letters. Which are just 
-       letters. <i>But only in memes</i>.
+    <p>I like to read mysteries and watch action shows, and spend my weekends cooking
+         and, occassionally, writing. You can check out my projects on <a href="https://github.com/cryswang">github</a> 
+         and connect with me on <a href="https://www.linkedin.com/in/crystal-wang-72885759/">linkedin</a>.
     </p>
     <br>
-    <p><b>I'm friendly, I swear.</b> I love to read and discover new writing,
-        with my favorite kinds being badboy tropes since I'm trashy like that 
-        and also a good thriller/mystery series so I can freak myself out when 
-        I'm alone in my bedroom at night.
-    </p>
-    <br>
-    <p>But really! I like to meet new people, writers or not. It's fun talking 
-        about mutual interests and also bouncing ideas off each other. And also 
-        screaming. Lots of it.
-    </p>
-    
-    <div class="bio_img"></div>
+    <p><b>Thanks for stopping by!</b></p>
 </div>
-
+</center>
 
 {% endblock %}
