--- a/blog/templates/blog/bio_page.html
+++ b/blog/templates/blog/bio_page.html
@@ -3,17 +3,11 @@
 {% block content %}
 <center>
 <div class="bio">
-    <p><b>Hi! I'm Crystal</b>, an upcoming-fourth year undergraduate CS student.
-        I'm interested in <b>front-end web development</b> and <b>full stack engineering</b>,
-         although there are countless other fields I'd love to explore <i>(such as UX)</i>.
-    </p>
-    <br>
-    <p>I like to read mysteries and watch action shows, and spend my weekends cooking
-         and, occassionally, writing. You can check out my projects on <a href="https://github.com/cryswang">github</a> 
-         and connect with me on <a href="https://www.linkedin.com/in/crystal-wang-72885759/">linkedin</a>.
-    </p>
-    <br>
-    <p><b>Thanks for stopping by!</b></p>
+<p><b>Hi! I'm Crystal</b>, an upcoming-fourth year undergraduate CS student. I'm interested in <b>front-end web development</b> and <b>full stack engineering</b>, although there are countless other fields I'd love to explore <i>(such as UX)</i>.</p>
+<br>
+<p>I like to read mysteries and watch action shows, and spend my weekends cooking and, occassionally, writing. You can check out my projects on <a href="https://github.com/cryswang">github</a> and connect with me on <a href="https://www.linkedin.com/in/crystal-wang-72885759/">linkedin</a>.</p>
+<br>
+<p><b>Thanks for stopping by!</b></p>
 </div>
 </center>
 
